--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,24 @@
-duckdb>=0.7.1
-pandas>=1.3.0
-numpy>=1.20.0
-scikit-learn>=1.0.0
-matplotlib>=3.4.0
-yfinance>=0.2.0
-seaborn>=0.11.0
-ipykernel>=6.0.0
+# Core data processing and database
+duckdb>=0.9.2
+pandas>=2.0.0
+numpy>=1.24.0
+
+# Visualization
+matplotlib>=3.7.0
+seaborn>=0.12.0
+plotly>=5.15.0
+
+# Machine learning and optimization
+scikit-learn>=1.3.0
+
+# API integration and web requests
+requests>=2.31.0
+
+# Environment management
+python-dotenv>=1.0.0
+
+# Development tools
+ipykernel>=6.25.0
 jupyter>=1.0.0
-plotly>=5.0.0
-tqdm>=4.62.0
-python-dotenv>=0.19.0
-requests>=2.27.0
-python-dateutil>=2.8.2 
+black>=23.9.0
+pytest>=7.4.0 
